Добавила негативные тесты для валидаций